# ipad_web

./: Cargo.toml  index.html
pkg/: ipad_web.d.ts  ipad_web.js  ipad_web_bg.wasm  ipad_web_bg.wasm.d.ts  package.json
src/: lib.rs
